# Perdia-DB

./: .gitignore  CI.env  Cargo.toml  Dockerfile  LICENSE  README.md  docker-compose.yml  example_ast.json  example_response.json  instance.json  start.sh  template.json
.cspell/: custom-dictionary-workspace.txt
.github/workflows/: build.yml
backup/: instances.json  templates.json
src/: backup.rs  crypto.rs  error.rs  main.rs  server.rs  template.rs  util.rs
src/ast/: mod.rs  rule.rs  snippet.rs  util.rs
src/backup/: mod.rs
src/data/: mod.rs  serialization.rs  structure.rs  template.rs
src/lexer/: data.rs  mod.rs  tokens.rs
src/parser/: lexer.rs  mod.rs  template.rs  tokens.rs
src/query/: backend.rs  error.rs  mod.rs  prop.rs  queries.rs  request.rs  response.rs
