[package]
name = "perdia_db"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "^1.5.5"
lazy_static = "^1.4.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["preserve_order"] }
linked-hash-map = { version = "0.5.4", features = ["serde_impl"] }
tokio = { version = "1.0", features = ["full"]}
time = { version = "0.3.9", features = ["formatting", "macros"] }
colored = "2"
aes = "0.8.1"
rust-crypto = "0.2.36"
dotenv = "*" # for testing
